--- a/src/main/resources/templates/productoPage.html
+++ b/src/main/resources/templates/productoPage.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
-<head th:replace="~{layout/plantilla :: head}">
-    <title>TODO supply a title</title>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <style th:replace="~{productoPage/fragmentos :: style}"/>
-</head>
+<head th:replace="~{layout/plantilla :: head}"/>
+<style th:replace="~{producto/fragmentos :: style}"/>
 <body>
 <section th:replace="~{categoria/fragmentos :: iniciarSesion}"/>
 
