--- a/src/main/resources/templates/productoPage/fragmentos.html
+++ b/src/main/resources/templates/productoPage/fragmentos.html
@@ -4,237 +4,31 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head th:replace="~{layout/plantilla :: head}">
     <title>fragmentos</title>
-    <style th:fragment="style">
-        /* Inicio icono guardar */
-        /* From Uiverse.io by Galahhad */
-        .ui-bookmark {
-            --icon-size: 24px;
-            --icon-secondary-color: rgb(77, 77, 77);
-            --icon-hover-color: rgb(97, 97, 97);
-            --icon-primary-color: gold;
-            --icon-circle-border: 1px solid var(--icon-primary-color);
-            --icon-circle-size: 35px;
-            --icon-anmt-duration: 0.3s;
-
-            position: absolute; /* Posiciona el icono en relación a la tarjeta */
-            top: 10px; /* Ajusta el espacio desde la parte superior */
-            right: 10px; /* Ajusta el espacio desde el borde derecho */
-            z-index: 1; /* Asegura que el icono esté por encima de la imagen */
-            opacity: 0; /* Oculta el icono por defecto */
-            transition: opacity 0.3s; /* Transición suave para el icono */
-            padding: 5px;
-        }
-
-        .ui-bookmark svg {
-            width: 24px; /* Ajusta el tamaño del icono según sea necesario */
-            height: 24px;
-        }
-
-        .ui-bookmark input {
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            display: none;
-        }
-
-        .ui-bookmark .bookmark {
-            width: var(--icon-size);
-            height: auto;
-            fill: var(--icon-secondary-color);
-            cursor: pointer;
-            -webkit-transition: 0.2s;
-            -o-transition: 0.2s;
-            transition: 0.2s;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-pack: center;
-            -ms-flex-pack: center;
-            justify-content: center;
-            -webkit-box-align: center;
-            -ms-flex-align: center;
-            align-items: center;
-            position: relative;
-            -webkit-transform-origin: top;
-            -ms-transform-origin: top;
-            transform-origin: top;
-        }
-
-        .bookmark::after {
-            content: "";
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            -webkit-box-shadow: 0 30px 0 -4px var(--icon-primary-color),
-            30px 0 0 -4px var(--icon-primary-color),
-            0 -30px 0 -4px var(--icon-primary-color),
-            -30px 0 0 -4px var(--icon-primary-color),
-            -22px 22px 0 -4px var(--icon-primary-color),
-            -22px -22px 0 -4px var(--icon-primary-color),
-            22px -22px 0 -4px var(--icon-primary-color),
-            22px 22px 0 -4px var(--icon-primary-color);
-            box-shadow: 0 30px 0 -4px var(--icon-primary-color),
-            30px 0 0 -4px var(--icon-primary-color),
-            0 -30px 0 -4px var(--icon-primary-color),
-            -30px 0 0 -4px var(--icon-primary-color),
-            -22px 22px 0 -4px var(--icon-primary-color),
-            -22px -22px 0 -4px var(--icon-primary-color),
-            22px -22px 0 -4px var(--icon-primary-color),
-            22px 22px 0 -4px var(--icon-primary-color);
-            border-radius: 50%;
-            -webkit-transform: scale(0);
-            -ms-transform: scale(0);
-            transform: scale(0);
-        }
-
-        .bookmark::before {
-            content: "";
-            position: absolute;
-            border-radius: 50%;
-            border: var(--icon-circle-border);
-            opacity: 0;
-        }
-
-        /* actions */
-
-        .ui-bookmark:hover .bookmark {
-            fill: var(--icon-hover-color);
-        }
-
-        .ui-bookmark input:checked + .bookmark::after {
-            -webkit-animation: circles var(--icon-anmt-duration) cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-            animation: circles var(--icon-anmt-duration) cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-            -webkit-animation-delay: var(--icon-anmt-duration);
-            animation-delay: var(--icon-anmt-duration);
-        }
-
-        .ui-bookmark input:checked + .bookmark {
-            fill: var(--icon-primary-color);
-            -webkit-animation: bookmark var(--icon-anmt-duration) forwards;
-            animation: bookmark var(--icon-anmt-duration) forwards;
-            -webkit-transition-delay: 0.3s;
-            -o-transition-delay: 0.3s;
-            transition-delay: 0.3s;
-        }
-
-        .ui-bookmark input:checked + .bookmark::before {
-            -webkit-animation: circle var(--icon-anmt-duration) cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-            animation: circle var(--icon-anmt-duration) cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-            -webkit-animation-delay: var(--icon-anmt-duration);
-            animation-delay: var(--icon-anmt-duration);
-        }
-
-        @-webkit-keyframes bookmark {
-            50% {
-                -webkit-transform: scaleY(0.6);
-                transform: scaleY(0.6);
-            }
-
-            100% {
-                -webkit-transform: scaleY(1);
-                transform: scaleY(1);
-            }
-        }
-
-        @keyframes bookmark {
-            50% {
-                -webkit-transform: scaleY(0.6);
-                transform: scaleY(0.6);
-            }
-
-            100% {
-                -webkit-transform: scaleY(1);
-                transform: scaleY(1);
-            }
-        }
-
-        @-webkit-keyframes circle {
-            from {
-                width: 0;
-                height: 0;
-                opacity: 0;
-            }
-
-            90% {
-                width: var(--icon-circle-size);
-                height: var(--icon-circle-size);
-                opacity: 1;
-            }
-
-            to {
-                opacity: 0;
-            }
-        }
-
-        @keyframes circle {
-            from {
-                width: 0;
-                height: 0;
-                opacity: 0;
-            }
-
-            90% {
-                width: var(--icon-circle-size);
-                height: var(--icon-circle-size);
-                opacity: 1;
-            }
-
-            to {
-                opacity: 0;
-            }
-        }
-
-        @-webkit-keyframes circles {
-            from {
-                -webkit-transform: scale(0);
-                transform: scale(0);
-            }
-
-            40% {
-                opacity: 1;
-            }
-
-            to {
-                -webkit-transform: scale(0.8);
-                transform: scale(0.8);
-                opacity: 0;
-            }
-        }
-
-        @keyframes circles {
-            from {
-                -webkit-transform: scale(0);
-                transform: scale(0);
-            }
-
-            40% {
-                opacity: 1;
-            }
-
-            to {
-                -webkit-transform: scale(0.8);
-                transform: scale(0.8);
-                opacity: 0;
-            }
-        }
-
-        /* Fin icono guardar */
-
-
-    </style>
 </head>
 <body>
+
 <div class="container px-4 px-lg-5 my-5" th:fragment="producto">
     <div class="row gx-4 gx-lg-5 align-items-center">
         <div class="col-md-6">
-            <img class="card-img-top mb-5 mb-md-0" th:src="${producto.rutaImagen}" alt="...">
+            <label class="ui-bookmark position-relative">
+                <input type="checkbox" class="d-none">
+                <div class="bookmark position-absolute top-0 end-0 p-2">
+                    <svg viewBox="0 0 32 32" width="24" height="24">
+                        <path d="M27 4v27a1 1 0 0 1-1.625.781L16 24.281l-9.375 7.5A1 1 0 0 1 5 31V4a4 4 0 0 1 4-4h14a4 4 0 0 1 4 4z"></path>
+                    </svg>
+                </div>
+            </label>
+            <!-- Imagen principal más grande -->
+            <img class="card-img-top mb-5 mb-md-0 img-principal" th:src="${producto.rutaImagen}" alt="...">
+
+            <!-- Imágenes secundarias más pequeñas -->
             <div class="d-flex justify-content-between mt-3">
-                <img class="img-fluid" src="https://via.placeholder.com/200x200" alt="" style="width: 48%;">
-                <img class="img-fluid" src="https://via.placeholder.com/200x200" alt="" style="width: 48%;">
+                <img class="img-fluid img-secundaria" src="https://via.placeholder.com/200x200" alt="">
+                <img class="img-fluid img-secundaria" src="https://via.placeholder.com/200x200" alt="">
             </div>
         </div>
         <div class="col-md-6">
-            <h1 class="display-5 fw-bolder" th:text="${producto.nombre}"> Shop item template</h1>
+            <h1 class="display-5 fw-bold                                                er" th:text="${producto.nombre}">Shop item template</h1>
             <div class="fs-5 mb-5">
                 <span th:text="${producto.precio}">$40.00</span>
             </div>
@@ -250,7 +44,6 @@
         </div>
     </div>
 </div>
-
 <div class="container px-4 px-lg-5 mt-5" th:fragment="relacionado">
     <h2 class="fw-bolder mb-4"> Productos relacionados</h2>
     <!-- Plantilla HTML con Bootstrap -->
