Carrito de compra

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,9 @@
 
       <aside th:replace="~{layout/plantilla :: recomendado}" />
       <div th:replace="~{layout/plantilla :: compras}" />
+      
+              <section th:replace="~{carrito/fragmentos :: listadoProductos}"></section>
+
 
 
     <footer th:replace="~{layout/plantilla :: footer}" />
